# hocayo

./: .gitignore  README.md  manage.py  pyproject.toml
helpers/: consts.py  enums.py  s3.py
hocayo_djongo/: asgi.py  settings.py  urls.py  wsgi.py
home_category/: admin.py  apps.py  consts.py  forms.py  models.py
home_category/migrations/: 0001_initial.py  0002_alter_homecategory_restaurant_category_slug_and_more.py  0003_alter_homecategory_list_group_and_more.py
