[tool.poetry]
name = "hocayo_djongo"
version = "0.1.0"
description = ""
authors = ["triumph1 <seungwon.jeong@deliveryhero.co.kr>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
